--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body{
-    background-image: linear-gradient(to bottom, #070709, #701c1a);
-    background-size:cover;
-    background-attachment: fixed;
+    background-color: #19173c;
+    /* background-image: linear-gradient(45deg, #00e5ff,#ff005b); */
 }
