--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body{
-    background-color: #19173c;
+    background: linear-gradient(to bottom, #19173c,#432061);
+    height: 150vh;
     /* background-image: linear-gradient(45deg, #00e5ff,#ff005b); */
 }
