--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body{
     background: linear-gradient(to bottom, #19173c,#432061);
-    height: 150vh;
+    background-size: auto;
+    height: 110vh;
     /* background-image: linear-gradient(45deg, #00e5ff,#ff005b); */
 }
